# bmw-driving-center

./: Dockerfile  README.md  bmw_driving_center.py  holiday.py  notification.py  pyproject.toml  rest.py  structs.py  test_bmw_driving_center.py
.github/workflows/: python-package.yml
src/: json.py  notification.py
